# cloudtalk-analytics-etl

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.documentation/: AI_CODING_PROMPTS.md  PROJECT_SPEC.md  TECHNICAL_SPEC.md  swagger (1).json
.schema/: agent_stats.sql  call_center_groups.sql  call_reasons.sql
scripts/: entrypoint.sh  init_db.py
src/cloudtalk_etl/: __init__.py  __main__.py  config.py  logging.py  main.py
src/cloudtalk_etl/api/: __init__.py  client.py  models.py  rate_limiter.py
src/cloudtalk_etl/db/: __init__.py  backend.py  connection.py  connection_mysql.py  repositories.py  repositories_mysql.py  schema.py  schema_mysql.py
src/cloudtalk_etl/etl/: __init__.py  extract.py  load.py  transform.py
tests/: conftest.py  test_api_client.py  test_etl.py  test_rate_limiter.py  test_repositories.py  test_transform.py
