[project]
name = "cloudtalk-etl"
version = "1.0.0"
description = "Nightly ETL service: CloudTalk API → Neon PostgreSQL for Qlik Sense analytics"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0,<0.29",
    "tenacity>=9.1.0,<10",
    "psycopg[binary]>=3.3.0,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=25.1,<26",
    "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
]
mysql = [
    "mysql-connector-python>=9.0,<10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
